--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>SAXconverter</h1>
-  <input id="link-input" placeholder="Pega aquí enlace de audio/video o arrastra archivo..." />
-  <div>
+  <h1 class="animado">SAXconverter</h1>
+  <input id="link-input" placeholder="Pega enlace o arrastra archivo..." />
+  <div class="botones">
     <button id="extract-btn">Extraer</button>
     <button id="sheet-btn">Partitura</button>
   </div>
-  <div>
-    <input id="desde" type="number" placeholder="desde" min="0">
-    <input id="hasta" type="number" placeholder="hasta" min="0">
+  <div class="rangos">
+    <input id="desde" type="number" min="0" placeholder="desde">
+    <input id="hasta" type="number" min="0" placeholder="hasta">
+    <span id="error" style="color: red; display: none;">Hasta debe ser mayor que desde</span>
   </div>
+  <input type="file" id="file-input" style="display:none;" accept="audio/*,video/*" />
   <script src="main.js"></script>
 </body>
 </html>
