--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="botones">
     <button id="extract-btn">Extraer</button>
     <button id="sheet-btn">Partitura</button>
+    <button id="stop-btn" disabled>Parar</button>
   </div>
   <div class="rangos">
     <input id="desde" type="number" min="0" placeholder="desde">
